[gd_scene load_steps=29 format=2]

[ext_resource path="res://src/game/entities/player/Player.gd" type="Script" id=1]
[ext_resource path="res://src/game/entities/player/states/AimUpWalkState.gd" type="Script" id=2]
[ext_resource path="res://src/game/entities/player/states/AimUpState.gd" type="Script" id=3]
[ext_resource path="res://src/game/entities/player/states/FireState.gd" type="Script" id=4]
[ext_resource path="res://src/game/entities/player/states/PlaneState.gd" type="Script" id=5]
[ext_resource path="res://src/game/entities/player/states/DownState.gd" type="Script" id=6]
[ext_resource path="res://src/game/entities/player/states/WalkFireState.gd" type="Script" id=7]
[ext_resource path="res://assets/textures/player/varitek-sprites.png" type="Texture" id=8]
[ext_resource path="res://src/game/entities/player/WeaponContainer.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/game/entities/player/PlayerStateMachine.gd" type="Script" id=12]
[ext_resource path="res://src/game/entities/player/states/WalkState.gd" type="Script" id=13]
[ext_resource path="res://src/game/entities/player/states/IdleState.gd" type="Script" id=14]
[ext_resource path="res://src/game/entities/player/states/DeadState.gd" type="Script" id=15]
[ext_resource path="res://src/game/entities/player/states/JumpState.gd" type="Script" id=16]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/WeaponPivot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 18, 34 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodyPivot/WeaponPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BodyPivot/CollisionShapeTransform:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BodyPivot/CollisionShapeTransform:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "aim_up"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.1, 0, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 15, 18, 19 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/WeaponPivot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 23, 15 ), Vector2( 16, 7 ), Vector2( 16, 7 ), Vector2( 17, -22 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodyPivot/WeaponPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -22.0, -51.0, -51.0, -51.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BodyPivot/CollisionShapeTransform:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BodyPivot/CollisionShapeTransform:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "aim_up_walk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 25, 26, 27 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/WeaponPivot:position")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 16, -22 ), Vector2( 16, -22 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodyPivot/WeaponPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -54.0, -54.0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "die"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("WeaponContainer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/Body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 30, 31, 32, 33, 34 ]
}

[sub_resource type="Animation" id=18]
resource_name = "down"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 35, 36, 37 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/WeaponPivot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 20, 8 ), Vector2( 24, -4 ), Vector2( 23, 2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodyPivot/CollisionShapeTransform:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 3 ), Vector2( 0, 6 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BodyPivot/CollisionShapeTransform:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.8 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BodyPivot/WeaponPivot:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -54.0, 0.0, 0.0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "fall"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 13, 13, 13 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/WeaponPivot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 21, 24 ), Vector2( 24.3333, -5.33333 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodyPivot/WeaponPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BodyPivot/CollisionShapeTransform:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -4, 3 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BodyPivot/CollisionShapeTransform:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.2, 1 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.1, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 15, 17, 17 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/WeaponPivot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 20, 8 ), Vector2( 23, -4 ), Vector2( 24, -4 ), Vector2( 22, -4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodyPivot/WeaponPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 30.0, 0.0, 0.0, 0.0 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("WeaponContainer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_weapon_fire"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BodyPivot/CollisionShapeTransform:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 3 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("BodyPivot/CollisionShapeTransform:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.2, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
length = 0.1
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/WeaponPivot:position")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 21, 9 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodyPivot/WeaponPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 29.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BodyPivot/CollisionShapeTransform:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -4, 3 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BodyPivot/CollisionShapeTransform:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "jump"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/WeaponPivot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 20, 7 ), Vector2( 7, 34 ), Vector2( 11, 17 ), Vector2( 25, -13 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodyPivot/CollisionShapeTransform:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -4, 3 ), Vector2( -4, 3 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BodyPivot/CollisionShapeTransform:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BodyPivot/WeaponPivot:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 29.0, -22.3 ]
}

[sub_resource type="Animation" id=11]
resource_name = "plane"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/WeaponPivot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 24, 31 ), Vector2( 24, 31 ), Vector2( 24, 31 ), Vector2( 24, 31 ), Vector2( 24, 4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodyPivot/WeaponPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0, 0.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BodyPivot/CollisionShapeTransform:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -4, 3 ), Vector2( -1, 5 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BodyPivot/CollisionShapeTransform:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 2, 0.65 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "robot"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 7, 6, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/WeaponPivot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 19, 8 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodyPivot/CollisionShapeTransform:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -4, 3 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BodyPivot/CollisionShapeTransform:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BodyPivot/WeaponPivot:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 31.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "walk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/WeaponPivot:position")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 20, 8 ), Vector2( 20, 9 ), Vector2( 20, 8 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodyPivot/CollisionShapeTransform:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -4, 3 ), Vector2( -4, 3 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BodyPivot/CollisionShapeTransform:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BodyPivot/WeaponPivot:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 31.0, 31.0, 31.0 ]
}

[sub_resource type="Animation" id=15]
resource_name = "walk_fire"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/WeaponPivot:position")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 21, -5 ), Vector2( 21, -5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodyPivot/WeaponPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BodyPivot/CollisionShapeTransform:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -4, 3 ), Vector2( -4, 3 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BodyPivot/CollisionShapeTransform:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 10.8333, 20 )

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 0.6, 0.6 )
collision_layer = 2
collision_mask = 3
script = ExtResource( 1 )
ACCELERATION = 15.0
jump_speed = 200
gravity = 8

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 12 )
character_path = NodePath("..")
START_STATE = NodePath("Idle")
STATES_LIST = [ NodePath("Idle"), NodePath("Walk"), NodePath("Jump"), NodePath("Dead"), NodePath("Fire"), NodePath("Plane"), NodePath("WalkFire"), NodePath("AimUp"), NodePath("AimUpWalk"), NodePath("Down") ]

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 14 )
state_id = "idle"

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource( 13 )
state_id = "walk"

[node name="WalkFire" type="Node" parent="StateMachine"]
script = ExtResource( 7 )
state_id = "walk_fire"

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource( 16 )
state_id = "jump"
jumps_limit = 0

[node name="Fire" type="Node" parent="StateMachine"]
script = ExtResource( 4 )
state_id = "fire"

[node name="Dead" type="Node" parent="StateMachine"]
script = ExtResource( 15 )
state_id = "dead"

[node name="Plane" type="Node" parent="StateMachine"]
script = ExtResource( 5 )
state_id = "plane"

[node name="AimUp" type="Node" parent="StateMachine"]
script = ExtResource( 3 )
state_id = "aim_up"

[node name="Down" type="Node" parent="StateMachine"]
script = ExtResource( 6 )
state_id = "down"

[node name="AimUpWalk" type="Node" parent="StateMachine"]
script = ExtResource( 2 )
state_id = "aim_up_walk"

[node name="BodyAnimations" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/RESET = SubResource( 3 )
anims/aim_up = SubResource( 14 )
anims/aim_up_walk = SubResource( 16 )
anims/die = SubResource( 8 )
anims/down = SubResource( 18 )
anims/fall = SubResource( 7 )
anims/fire = SubResource( 12 )
anims/idle = SubResource( 4 )
anims/jump = SubResource( 5 )
anims/plane = SubResource( 11 )
anims/robot = SubResource( 13 )
anims/walk = SubResource( 6 )
anims/walk_fire = SubResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -4, 3 )
scale = Vector2( 1.2, 1 )
shape = SubResource( 17 )

[node name="FloorRaycasts" type="Node2D" parent="."]
position = Vector2( -2.66667, 24.3333 )

[node name="RayCast2D" type="RayCast2D" parent="FloorRaycasts"]
position = Vector2( -4, 0 )
cast_to = Vector2( 0, 1 )

[node name="RayCast2D2" type="RayCast2D" parent="FloorRaycasts"]
cast_to = Vector2( 0, 1 )

[node name="RayCast2D3" type="RayCast2D" parent="FloorRaycasts"]
position = Vector2( 6, 0 )
cast_to = Vector2( 0, 1 )

[node name="BodyPivot" type="Node2D" parent="."]

[node name="CollisionShapeTransform" type="RemoteTransform2D" parent="BodyPivot"]
position = Vector2( -4, 3 )
scale = Vector2( 1.2, 1 )
remote_path = NodePath("../../CollisionShape2D")

[node name="Body" type="Sprite" parent="BodyPivot"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )
hframes = 5
vframes = 8
frame = 13

[node name="WeaponPivot" type="Node2D" parent="BodyPivot"]
position = Vector2( 24.3333, -5.33333 )
z_as_relative = false

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="BodyPivot/WeaponPivot"]
position = Vector2( 2.33333, 0.333332 )
remote_path = NodePath("../../../WeaponContainer")

[node name="WeaponContainer" parent="." instance=ExtResource( 9 )]
visible = false
position = Vector2( 26.6666, -5 )

[connection signal="healed" from="." to="StateMachine" method="notify_healed"]
[connection signal="hit" from="." to="StateMachine" method="notify_hit"]
[connection signal="animation_finished" from="BodyAnimations" to="StateMachine" method="_on_animation_finished"]
